--- a/src/components/partner/Partner.css
+++ b/src/components/partner/Partner.css
@@ -151,3 +151,13 @@
     grid-template-columns: repeat(1, 1fr);
   }
 }
+
+/* --------- */
+.partner-card-svg {
+  fill: black;
+  transition: fill 0.3s;
+}
+
+.partner-card:hover .partner-card-svg {
+  fill: red;
+}
