--- a/src/components/schema-production/Schema.css
+++ b/src/components/schema-production/Schema.css
@@ -10,7 +10,7 @@
 
 .schema-box {
   min-height: 900px !important;
-  margin-top: 30px;
+  margin-top: 50px;
   margin-bottom: 30px;
 }
 
@@ -119,7 +119,7 @@
     max-width: 1024px;
   }
 
-  .order-component .container {
+  .schema-component .container {
     max-width: 960px;
   }
   .schema-container:first-child {
@@ -191,7 +191,7 @@
     max-width: 1024px;
   }
 
-  .order-component .container {
+  .schema-component .container {
     max-width: 960px;
   }
   .schema-container:first-child {
@@ -263,7 +263,7 @@
     max-width: 768px;
   }
 
-  .order-component .container {
+  .schema-component .container {
     max-width: 720px;
   }
 
@@ -376,7 +376,7 @@
     max-width: 425px;
   }
 
-  .order-component .container {
+  .schema-component .container {
     max-width: 375px;
   }
 
@@ -493,7 +493,7 @@
     max-width: 375px;
   }
 
-  .order-component .container {
+  .schema-component .container {
     max-width: 320px;
   }
 
@@ -502,8 +502,8 @@
     height: 220px;
     padding: 10px;
     border-right: 0px;
-    border-top: 1px solid #3a9c6f;
-    border-bottom: 1px solid #3a9c6f;
+    border-top: 0px solid #3a9c6f;
+    border-bottom: 0px solid #3a9c6f;
     border-left: 3px solid #3a9c6f;
     border-top-right-radius: 84px;
     border-bottom-right-radius: 84px;
@@ -610,11 +610,11 @@
     max-width: 320px;
   }
 
-  .order-component .container {
+  .schema-component .container {
     max-width: 300px;
   }
 
-  .schema-component .container  h2{
+  .schema-component .container h2 {
     font-size: 20px;
   }
 
