why page is ready

--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -14,8 +14,8 @@
 .about-text p {
   font-size: 16px;
   letter-spacing: 0.3px;
-  line-height: 1.5;
-  color: #444444;
+  line-height: 1.6;
+  margin-bottom: 10px;
 }
 
 .about-text p a {
