--- a/src/components/partner/Partner.css
+++ b/src/components/partner/Partner.css
@@ -8,9 +8,6 @@
 }
 
 .partner-box {
-  /* display: grid; */
-  /* grid-template-columns: repeat(3, 1fr); */
-  /* grid-gap: 30px; */
   display: flex;
   flex-wrap: wrap;
   gap: 25px;
@@ -52,6 +49,7 @@
 
 .partner-card p {
   text-align: center;
+  text-wrap: balance;
 }
 
 .partner-card:hover {
