--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -143,7 +143,7 @@
     max-width: 960px;
     padding: 20px 15px;
   }
-  .navs {
+  /* .navs {
     display: none;
   }
   .burger {
@@ -242,7 +242,7 @@
     left: 10px;
     width: 100%;
     transform: rotate(-406deg);
-  }
+  } */
 }
 
 @media (max-width: 768px) {
@@ -260,11 +260,11 @@
     display: block;
     position: fixed;
     overflow: hidden;
-    top: 70px;
+    top: 50px;
     right: 0;
     left: 0;
     bottom: 0;
-    background: rgba(40, 58, 90, 0.9);
+    background: #f2f2f2;
     transition: 0.3s;
     z-index: 999;
     transform: translateX(0);
@@ -286,7 +286,7 @@
     left: 15px;
     padding: 20px;
     border-radius: 10px;
-    background-color: #fff;
+    background-color: #f2f2f2;
     overflow-y: auto;
     transition: 0.3s;
   }
@@ -366,7 +366,7 @@
     right: 0;
     left: 0;
     bottom: 0;
-    background: rgba(40, 58, 90, 0.9);
+    background: #f2f2f2;
     transition: 0.3s;
     z-index: 999;
     transform: translateX(0);
@@ -382,7 +382,7 @@
     left: 15px;
     padding: 10px 10px;
     border-radius: 10px;
-    background-color: #fff;
+    background-color: #f2f2f2;
     overflow-y: auto;
     transition: 0.3s;
   }
@@ -418,7 +418,7 @@
     right: 0;
     left: 0;
     bottom: 0;
-    background: rgba(40, 58, 90, 0.9);
+    background: #f2f2f2;
     transition: 0.3s;
     z-index: 999;
     transform: translateX(0);
@@ -434,7 +434,7 @@
     left: 15px;
     padding: 10px 10px;
     border-radius: 10px;
-    background-color: #fff;
+    background-color: #f2f2f2;
     overflow-y: auto;
     transition: 0.3s;
   }
