--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -80,6 +80,7 @@
   padding: 9px 9px;
   box-sizing: border-box;
   border-radius: 50%;
+  cursor: pointer;
 }
 
 .footer-icons .icon .icon-back {
@@ -90,7 +91,7 @@
 .network-fixed {
   position: fixed;
   right: 50px;
-  bottom: 250px;
+  bottom: 20px;
   transition: transform 0.3s ease;
 }
 
@@ -103,16 +104,16 @@
 }
 
 .fixed-content {
-  top: -150px;
-  transform: translateY(-100%);
-  opacity: 0;
+  position: absolute;
+  top: -250px;
+  transform: translateY(80%);
   transition: transform 0.5s ease-in, opacity 0.5s ease-in;
 }
 
 .fixed-content.active {
-  top: -150px;
   transform: translateY(0%);
-  opacity: 1;
+  opacity: 0;
+  border: none;
 }
 
 .fixed-icons {
