--- a/src/components/tabs/Tabs.css
+++ b/src/components/tabs/Tabs.css
@@ -3,13 +3,14 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  gap: 50px;
+  gap: 100px;
 }
 
 .tabs-btns button {
   color: #393939;
   font-size: 24px;
   font-weight: 600;
+  padding: 0px;
 }
 
 .active {
@@ -49,7 +50,7 @@
 .tabs-content-text button {
   width: 190px;
   height: 59px;
-  padding: 14px 36px;
+  /* padding: 14px 36px; */
   background-color: #3a9c6f;
   color: #fff !important;
   font-size: 18px;
@@ -58,26 +59,24 @@
   margin-top: 10px;
 }
 
-
 @media (max-width: 425px) {
-    .tabs-btns {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-    }
-    .tabs-btns button {
-        font-size: 16px;
-    }
+  .tabs-btns {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  .tabs-btns button {
+    font-size: 16px;
+  }
 }
 
-
 @media (max-width: 375px) {
-    .tabs-btns {
-        display: flex;
-        align-items: center;
-        gap: 2px;
-    }
-    .tabs-btns button {
-        font-size: 16px;
-    }
+  .tabs-btns {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+  }
+  .tabs-btns button {
+    font-size: 16px;
+  }
 }
