--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -41,36 +41,16 @@
   display: flex;
   align-items: center;
   gap: 10px;
+  margin: 0;
 }
 
 .navs ul li a {
   padding: 8px 20px;
-  border-radius: 50px;
   cursor: pointer;
-  color: #fff;
   font-size: 16px;
   font-weight: 400;
 }
 
-.navs ul li a:hover {
-  color: #fff;
-  transition: all 0.3s ease;
-}
-
-.active {
-  color: #3a9c6f !important;
-}
-
-.navs .header-btn {
-  width: 92px;
-  height: 34px;
-  box-sizing: border-box;
-  padding: 8px 20px;
-  font-size: 15px;
-  border-radius: 50px;
-  font-weight: 500;
-  color: #fff;
-}
 .burger {
   position: relative;
   width: 40px;
