--- a/src/components/product/Product.css
+++ b/src/components/product/Product.css
@@ -43,10 +43,10 @@
 
 .product-box-card {
   margin-top: 30px;
+  width: 1200px;
 }
 
 .box {
-  width: 1200px;
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
@@ -55,7 +55,7 @@
 
 .card-item {
   width: 278px;
-  height: 430px;
+  height: 350px;
   position: relative;
   overflow: hidden;
   display: flex;
@@ -65,13 +65,13 @@
 
 .image-container {
   width: 100%;
-  height: 360px;
+  /* height: 360px; */
 }
 
 .image-container img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   transition: transform 0.5s ease;
 }
 
