--- a/src/components/schema-production/Schema.css
+++ b/src/components/schema-production/Schema.css
@@ -108,11 +108,16 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 10px;
 }
 
 .schema-card-text h2 {
   text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.schema-card-text p{
+  margin: 0;
 }
 
 @media (max-width: 1024px) {
