--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -107,10 +107,10 @@
 
 .fixed-content {
   position: absolute;
-  top: -200px;
+  top: -250px;
   left: 10px;
   opacity: 0;
-  transform: translateY(80%);
+  transform: translateY(100%);
   transition: transform 0.5s ease-in, opacity 0.5s ease-in;
   cursor: pointer;
 }
@@ -146,8 +146,10 @@
   }
   .fixed-content {
     position: absolute;
-    left: -75px;
-    top: -250px;
+    left: -76px;
+    opacity: 0;
+    top: -300px;
+    transform: translateY(65%);
   }
 }
 
@@ -161,6 +163,13 @@
     position: absolute;
     left: -75px;
     top: -250px;
+  }
+  .fixed-content {
+    position: absolute;
+    left: -76px;
+    opacity: 0;
+    top: -300px;
+    transform: translateY(65%);
   }
 }
 
@@ -180,6 +189,13 @@
     position: absolute;
     left: -75px;
     top: -250px;
+  }
+  .fixed-content {
+    position: absolute;
+    left: -76px;
+    opacity: 0;
+    top: -300px;
+    transform: translateY(65%);
   }
 }
 
@@ -207,6 +223,13 @@
     left: -60px;
     top: -200px;
   }
+  .fixed-content {
+    position: absolute;
+    left: -62px;
+    opacity: 0;
+    top: -270px;
+    transform: translateY(65%);
+  }
 }
 
 @media (max-width: 375px) {
@@ -226,5 +249,12 @@
     position: absolute;
     left: -60px;
     top: -200px;
+  }
+  .fixed-content {
+    position: absolute;
+    left: -62px;
+    opacity: 0;
+    top: -268px;
+    transform: translateY(65%);
   }
 }
