--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -9,12 +9,13 @@
 
 .carousel {
   width: 100%;
-  max-height: 574px;
+  max-height: 400px !important;
 }
 
 .carousel img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 .carousel h3 {
